Add container and update styles

--- a/lib/notification-badge.html
+++ b/lib/notification-badge.html
@@ -1,4 +1,6 @@
 <template name="notificationBadge">
-  {{> Template.contentBlock}}
-  <span class="notification-count">{{count}}</span>
+  <div style="notification-container {{class}}">
+    {{> Template.contentBlock}}
+    <span class="notification-count">{{count}}</span>
+  </div>
 </template>
