Improve class naming, update README

--- a/lib/notification-badge.html
+++ b/lib/notification-badge.html
@@ -1,6 +1,6 @@
 <template name="notificationBadge">
   <div style="notification-container {{class}}">
     {{> Template.contentBlock}}
-    <span class="notification-count">{{count}}</span>
+    <span class="notification-badge">{{count}}</span>
   </div>
 </template>
