--- a/lib/notification-badge.html
+++ b/lib/notification-badge.html
@@ -1,5 +1,5 @@
 <template name="notificationBadge">
-  <div style="notification-container {{class}}">
+  <div class="notification-container {{class}}">
     {{> Template.contentBlock}}
     <span class="notification-badge">{{count}}</span>
   </div>
